2018-03-26 Franz Holzinger  <franz@ttproducts.de>
    * copy the template file template/tx_agency_css_tmpl.html into Resorces/Private/Templates/AgencyRegistrationTemplate.html

2018-03-12 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: "on" = 0 is TRUE. The Tca class method modifyRow must compare to "on" with three equation signs ===. The support for "on" as a valid value for a check field will continue, however it should be 1.

2018-03-07 Franz Holzinger  <franz@ttproducts.de>
    * copy the language files into Resorces/Private/Language in XLF format and rename the root locallang.xlf into locallang_db_layout.xlf

2018-03-02 Franz Holzinger <franz@ttproducts.de>
    * rename Classes/Api/Email.php => Classes/Controller/Email.php
    * extract methods computeUrl and storeFixedPiVars from class Controller/Setfixed into class Setfixed/SetfixedUrls as compute and storeFixedPiVars. Remove the not any more needed method parameter variables $setfixedObj from several classes.
    * extract methods getOpenFields, getSecuredFieldArray, getSecuredValue and secureInput from class Request/Parameters into class Security/SecuredData as getOpenFields, getSecuredFields, getSecuredValue and secureInput

2018-02-26 Franz Holzinger <franz@ttproducts.de>
    * move getSimpleTemplate from CreateView into Template

2018-02-21 Franz Holzinger <franz@ttproducts.de>
    * extract methods render for class AfterSaveView and getKeyAfterSave for Template out of the CreateView methods afterSave and getKeyAfterSave

2018-02-13 Franz Holzinger <franz@ttproducts.de>
    * extract classes DeleteView, EditView and Template out of CreateView

2018-01-06 Franz Holzinger <franz@ttproducts.de>
    * new feature: Add a cancel option to the confirmation dialog for APPROVE and DELETE
    * new feature: automatic generation of customer number
    * new feature: add the marker ###XHTML### which can transform the HTML into XHTML

2017-12-21 Franz Holzinger <franz@ttproducts.de>